Instance_Launch/Single_Instance_Launch.tf
resource "aws_instance" "EC2_Instance" {
    availability_zone = var.az
    instance_type = var.instance_type
    ami= var.ami
    key_name=var.key
    vpc_security_group_ids=[aws_security_group.Port80and22.id]

tags={
    Name="EC2_Instance"
     }
user_data = <<-EOF
 #!/bin/bash
    /usr/bin/yum update
    /usr/bin/yum install httpd -y
    sudo service httpd start
    /usr/bin/ chkconfig httpd on
    /bin/echo "Hello from " >/var/www/html/index.html
    instance_ip=`curl http://169.254.169.254/latest/meta-data/public-ipv4`
    echo $instance_ip >>/var/www/html/index.html
 EOF
}
